// Copyright 2021 The Chromium OS Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";

package tast.cros.firmware;

import "google/protobuf/empty.proto";

option go_package = "chromiumos/tast/services/cros/firmware";

// FpUpdaterService provides some basic operations used by fingerprint tests.
service FpUpdaterService {
  // ReadUpdaterLogs reads the latest and previous logs from the fingerprint firmware updater.
  rpc ReadUpdaterLogs (google.protobuf.Empty) returns (ReadFpUpdaterLogsResponse) {}
}


message ReadFpUpdaterLogsResponse {
  string latest_log = 1;
  string previous_log = 2;
}
